# sf_chess

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: chesspiece.cpp.B4CA6A4D28BFC88A.idx  main.cpp.46C0C6B89DD34E28.idx  piece.h.1F2DD2C33082D42C.idx
src/: CMakeLists.txt  main.cpp
src/game/: CMakeLists.txt  chessboard.cpp  chessboard.h  chesspiece.cpp  chesspiece.h
